--- a/css/mega-menu.css
+++ b/css/mega-menu.css
@@ -81,7 +81,7 @@
 
 nav a,
 /* Login button */
-nav .c-btn,
+nav .btn,
 /* Search icon */
 nav svg {
     position: relative;
@@ -99,7 +99,7 @@ nav {
         left: 0;
         top: 0;
         /* Above nav */
-        z-index: 2;
+        z-index: var(--z-index-modal);
         width: 100%;
     }
 }
@@ -210,6 +210,7 @@ nav .c-mega-menu__back-button svg {
     font-family: var(--font-family-main);
     font-size: var(--font-size-s-x-x-custom);
     font-weight: var(--font-family-main-weight-strong);
+    line-height: var(--font-size-m-line-height);
 }
 
 .c-mega-menu ul:nth-child(odd):not(.c-mega-menu__full-width) {
